--- a/SeminarThesis/references.bib
+++ b/SeminarThesis/references.bib
@@ -70,20 +70,6 @@ doi={10.1109/ITST.2013.6685518},
 ISSN={},
 month={Nov},}
 
-@INPROCEEDINGS{4976256,
-author={S. Kuklinski and G. Wolny},
-booktitle={2009 5th International Conference on Testbeds and Research Infrastructures for the Development of Networks Communities and Workshops},
-title={Density based clustering algorithm for VANETs},
-year={2009},
-volume={},
-number={},
-pages={1-6},
-abstract={In this paper we present a new multilevel clustering algorithm for Vehicular Ad-Hoc Networks (VANET), which we will call the Density Based Clustering (DBC) algorithm. Our solution is focused on the formation of stable, long living clusters for reliable communication. Cluster formation is based on complex clustering metric which takes into account density of connection graph, link quality and traffic conditions. Tests performed in the simulation environment composed from VanetMobiSim and JiST/SWANS have shown that algorithm performs better than the popular classic approach (the Lowest Id algorithm [1]) - the clusters stability is significantly increased.},
-keywords={ad hoc networks;vehicles;VANETs;clustering algorithm;vehicular ad-hoc networks;Ad hoc networks;Change detection algorithms;Clustering algorithms;Performance evaluation;Research and development;Roads;Stability;Telecommunication network reliability;Telecommunication traffic;Topology},
-doi={10.1109/TRIDENTCOM.2009.4976256},
-ISSN={},
-month={April},}
-
 @INPROCEEDINGS{5416361,
 author={N. Maslekar and M. Boussedjra and J. Mouzna and L. Houda},
 booktitle={2009 IEEE Vehicular Networking Conference (VNC)},
@@ -112,19 +98,20 @@ doi={10.1109/LCN.2010.5735785},
 ISSN={0742-1303},
 month={Oct},}
 
-@INPROCEEDINGS{6077004,
-author={M. M. C. Morales and C. S. Hong and Y. C. Bang},
-booktitle={2011 13th Asia-Pacific Network Operations and Management Symposium},
-title={An Adaptable Mobility-Aware Clustering Algorithm in vehicular networks},
-year={2011},
+
+@INPROCEEDINGS{4976256,
+author={S. Kuklinski and G. Wolny},
+booktitle={2009 5th International Conference on Testbeds and Research Infrastructures for the Development of Networks Communities and Workshops},
+title={Density based clustering algorithm for VANETs},
+year={2009},
 volume={},
 number={},
 pages={1-6},
-abstract={The forthcoming Intelligent Transportation System aims to achieve safety and productivity in transportation using vehicular ad hoc networks (VANETs) to support the communications system required. Currently, some clustering approaches have been proposed to improve the performance of VANETs due to their dynamic nature, high scalability and load balancing results. However, the host mobility and the constantly topology change continue to be main problems of this technique due to the lack of models which represent the vehicular behavior and the group mobility patterns. Therefore, we propose an Adaptable Mobility-Aware Clustering Algorithm based on Destination positions (AMACAD) to accurately follow the mobility pattern of the network prolonging the cluster lifetime and reducing the global overhead. In an effort to show the efficiency of AMACAD, a set of simulation was executed. The obtained results reveal an outstanding performance in terms of the lifetime of the cluster heads, lifetime of the members and the re-affiliation rate under varying speeds and transmission ranges.},
-keywords={mobility management (mobile radio);vehicular ad hoc networks;adaptable mobility aware clustering algorithm;destination positions;forthcoming intelligent transportation;vehicular ad hoc networks;vehicular networks;Algorithm design and analysis;Bandwidth;Clustering algorithms;Mobile communication;Proposals;Roads;Vehicles;Clustering Algorithm;Destination-Based;Intelligent Transportation System ITS;Mobility Aware;VANET;Vehicular Networks},
-doi={10.1109/APNOMS.2011.6077004},
+abstract={In this paper we present a new multilevel clustering algorithm for Vehicular Ad-Hoc Networks (VANET), which we will call the Density Based Clustering (DBC) algorithm. Our solution is focused on the formation of stable, long living clusters for reliable communication. Cluster formation is based on complex clustering metric which takes into account density of connection graph, link quality and traffic conditions. Tests performed in the simulation environment composed from VanetMobiSim and JiST/SWANS have shown that algorithm performs better than the popular classic approach (the Lowest Id algorithm [1]) - the clusters stability is significantly increased.},
+keywords={ad hoc networks;vehicles;VANETs;clustering algorithm;vehicular ad-hoc networks;Ad hoc networks;Change detection algorithms;Clustering algorithms;Performance evaluation;Research and development;Roads;Stability;Telecommunication network reliability;Telecommunication traffic;Topology},
+doi={10.1109/TRIDENTCOM.2009.4976256},
 ISSN={},
-month={Sept},}
+month={April},}
 
 @INPROCEEDINGS{6379136,
 author={L. A. Maglaras and D. Katsaros},
@@ -140,6 +127,21 @@ doi={10.1109/WiMOB.2012.6379136},
 ISSN={2160-4886},
 month={Oct},}
 
+@INPROCEEDINGS{6077004,
+author={M. M. C. Morales and C. S. Hong and Y. C. Bang},
+booktitle={2011 13th Asia-Pacific Network Operations and Management Symposium},
+title={An Adaptable Mobility-Aware Clustering Algorithm in vehicular networks},
+year={2011},
+volume={},
+number={},
+pages={1-6},
+abstract={The forthcoming Intelligent Transportation System aims to achieve safety and productivity in transportation using vehicular ad hoc networks (VANETs) to support the communications system required. Currently, some clustering approaches have been proposed to improve the performance of VANETs due to their dynamic nature, high scalability and load balancing results. However, the host mobility and the constantly topology change continue to be main problems of this technique due to the lack of models which represent the vehicular behavior and the group mobility patterns. Therefore, we propose an Adaptable Mobility-Aware Clustering Algorithm based on Destination positions (AMACAD) to accurately follow the mobility pattern of the network prolonging the cluster lifetime and reducing the global overhead. In an effort to show the efficiency of AMACAD, a set of simulation was executed. The obtained results reveal an outstanding performance in terms of the lifetime of the cluster heads, lifetime of the members and the re-affiliation rate under varying speeds and transmission ranges.},
+keywords={mobility management (mobile radio);vehicular ad hoc networks;adaptable mobility aware clustering algorithm;destination positions;forthcoming intelligent transportation;vehicular ad hoc networks;vehicular networks;Algorithm design and analysis;Bandwidth;Clustering algorithms;Mobile communication;Proposals;Roads;Vehicles;Clustering Algorithm;Destination-Based;Intelligent Transportation System ITS;Mobility Aware;VANET;Vehicular Networks},
+doi={10.1109/APNOMS.2011.6077004},
+ISSN={},
+month={Sept},}
+
+
 @article{HASSANABADI2014535,
 title = "Clustering in Vehicular Ad Hoc Networks using Affinity Propagation",
 journal = "Ad Hoc Networks",
@@ -152,6 +154,39 @@ url = "http://www.sciencedirect.com/science/article/pii/S1570870513002278",
 author = "B. Hassanabadi and C. Shea and L. Zhang and S. Valaee",
 keywords = "Ad Hoc Networks, Vehicular networks, Clustering, Affinity Propagation",
 abstract = "Abstract The need for an effective clustering algorithm for Vehicular Ad Hoc Networks (VANETs) is motivated by the recent research in cluster-based MAC and routing schemes. VANETs are highly dynamic and have harsh channel conditions, thus a suitable clustering algorithm must be robust to channel error and must consider node mobility during cluster formation. This work presents a novel, mobility-based clustering scheme for Vehicular Ad hoc Networks, which forms clusters using the Affinity Propagation algorithm in a distributed manner. This proposed algorithm considers node mobility during cluster formation and produces clusters with high stability. Cluster performance was measured in terms of average clusterhead duration, average cluster member duration, average rate of clusterhead change, and average number of clusters. The proposed algorithm is also robust to channel error and exhibits reasonable overhead. Simulation results confirm the superior performance, when compared to other mobility-based clustering techniques."
+}
+
+@inproceedings{Zhang2069135,
+ author = {Zhang, Zhenxia and Boukerche, Azzedine and Pazzi, Richard},
+ title = {A Novel Multi-hop Clustering Scheme for Vehicular Ad-hoc Networks},
+ booktitle = {Proceedings of the 9th ACM International Symposium on Mobility Management and Wireless Access},
+ series = {MobiWac '11},
+ year = {2011},
+ isbn = {978-1-4503-0901-1},
+ location = {Miami, Florida, USA},
+ pages = {19--26},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2069131.2069135},
+ doi = {10.1145/2069131.2069135},
+ acmid = {2069135},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {clustering, vehicular ad-hoc networks},
+} 
+
+@INPROCEEDINGS{6554933, 
+author={S. Ucar and S. C. Ergen and O. Ozkasap}, 
+booktitle={2013 IEEE Wireless Communications and Networking Conference (WCNC)}, 
+title={VMaSC: Vehicular multi-hop algorithm for stable clustering in Vehicular Ad Hoc Networks}, 
+year={2013}, 
+volume={}, 
+number={}, 
+pages={2381-2386}, 
+abstract={Clustering is an effective mechanism to handle the fast changes in the topology of vehicular ad hoc networks (VANET) by using local coordination. Constructing stable clusters by determining the vehicles sharing similar mobility pattern is essential in reducing the overhead of clustering algorithms. In this paper, we introduce VMaSC: Vehicular Multi-hop algorithm for Stable Clustering. VMaSC is a novel clustering technique based on choosing the node with the least mobility calculated as a function of the speed difference between neighboring nodes as the cluster head through multiple hops. Extensive simulation experiments performed using ns-3 with the vehicle mobility input from the Simulation of Urban Mobility (SUMO) demonstrate that novel metric used in the evaluation of the least mobile node and multi-hop clustering increases cluster head duration by 25% while decreasing the number of cluster head changes by 10%.}, 
+keywords={pattern clustering;telecommunication network topology;vehicular ad hoc networks;SUMO;Simulation of Urban Mobility;VANET topology;VMaSC;cluster head;least mobile node evaluation;local coordination;mobility pattern;multiple hops;neighboring nodes;ns-3;speed difference;vehicular ad hoc networks;vehicular multihop algorithm for stable clustering;Clustering algorithms;Measurement;Nominations and elections;Radiation detectors;Vehicle dynamics;Vehicles;Vehicular ad hoc networks}, 
+doi={10.1109/WCNC.2013.6554933}, 
+ISSN={1525-3511}, 
+month={April},
 }
 
 @article{sommer2011bidirectionally,
