remove unnecessary files

--- a/SeminarThesis/references.bib
+++ b/SeminarThesis/references.bib
@@ -182,12 +182,10 @@ year={2013},
 volume={}, 
 number={}, 
 pages={2381-2386}, 
-abstract={Clustering is an effective mechanism to handle the fast changes in the topology of vehicular ad hoc networks (VANET) by using local coordination. Constructing stable clusters by determining the vehicles sharing similar mobility pattern is essential in reducing the overhead of clustering algorithms. In this paper, we introduce VMaSC: Vehicular Multi-hop algorithm for Stable Clustering. VMaSC is a novel clustering technique based on choosing the node with the least mobility calculated as a function of the speed difference between neighboring nodes as the cluster head through multiple hops. Extensive simulation experiments performed using ns-3 with the vehicle mobility input from the Simulation of Urban Mobility (SUMO) demonstrate that novel metric used in the evaluation of the least mobile node and multi-hop clustering increases cluster head duration by 25% while decreasing the number of cluster head changes by 10%.}, 
 keywords={pattern clustering;telecommunication network topology;vehicular ad hoc networks;SUMO;Simulation of Urban Mobility;VANET topology;VMaSC;cluster head;least mobile node evaluation;local coordination;mobility pattern;multiple hops;neighboring nodes;ns-3;speed difference;vehicular ad hoc networks;vehicular multihop algorithm for stable clustering;Clustering algorithms;Measurement;Nominations and elections;Radiation detectors;Vehicle dynamics;Vehicles;Vehicular ad hoc networks}, 
 doi={10.1109/WCNC.2013.6554933}, 
 ISSN={1525-3511}, 
-month={April},
-}
+month={April},}
 
 @article{sommer2011bidirectionally,
   author = {Sommer, Christoph and German, Reinhard and Dressler, Falko},
