--- a/SeminarThesis/thesis.tex
+++ b/SeminarThesis/thesis.tex
@@ -259,7 +259,7 @@ members to the cluster. As shown in \ref{fig:2hop} and \ref{fig:3hop}, the multi
 via the intermediate members and can be located a maximum of N-hop distance away from the \ac{CH}. In a multi-hop
 clustering methodology, the \texttt{HELLO} messages contain additionally the number of current hops and are re-broadcasted
 by a node after adding themselves as a intermediate node. This forms the basis for identifying routes to the N-hop nodes
-after clustering. The clustering schemes based on multi-hop are described in \cite{Zhang2069135, 6554933}.
+after clustering. The clustering schemes based on multi-hop are described in \cite{Zhang2069135} and \cite{6554933}.
 
 \begin{figure}[h]%
 	\centering
